--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoTrade">
-
+        <activity android:name=".SignUpActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity"></activity>
         <activity
             android:name=".SettingsActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity">
-
-        </activity>
+            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity"></activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.AppCompat.DayNight.LoginActivity">
