Added stock info page with recent info

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoTrade">
-        <activity android:name=".StockDetailActivity"></activity>
+        <activity android:name=".StockDetailActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity" />
         <activity
             android:name=".SignUpActivity"
             android:screenOrientation="portrait" />
