--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PseudoTrade">
         <activity
+            android:name=".learning_page"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.DayNight.LoginActivity" />
+        <activity
             android:name=".TradeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.DayNight.LoginActivity" />
